create menu for navbar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Movie Man</string>
+
+<!--    Navbar-->
+    <string name="trending">Trending</string>
+    <string name="now_playing">Now Playing</string>
+    <string name="search">Search</string>
+    <string name="bookmarks">Bookmarks</string>
 </resources>
