--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,10 @@
     <string name="now_playing">Now Playing</string>
     <string name="search">Search</string>
     <string name="bookmarks">Bookmarks</string>
+
+<!--    Movie Grid-->
+    <string name="movie_desc">Movie</string>
+    <string name="bookmark_desc">Bookmark</string>
+    <string name="rating_desc">Rating</string>
+    <string name="default_rating">0.0</string>
 </resources>
