--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,7 @@
 <!--    Search-->
     <string name="enter_more_than_three">Please enter more than 3 characters.</string>
     <string name="showing_results_for">Showing results for: </string>
+
+<!--    Internet-->
+    <string name="working_offline">Working Offline</string>
 </resources>
