complete movie view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,8 @@
     <string name="movie_share">Share</string>
     <string name="movie_bookmark">Bookmark</string>
     <string name="plus18">18+</string>
+    <string name="release_date_head">Released on </string>
+    <string name="release_not_available">(Not Available)</string>
 
     <!--    Share-->
     <string name="movie_view_ref_code">@string/app_name</string>
