move to top button added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="rating_desc">Rating</string>
     <string name="default_rating">0.0</string>
     <string name="empty_list">Nothing present here *yet*</string>
+    <string name="move_to_top">Move To Top</string>
 
     <!--    Trending-->
     <string name="trending_today">Today</string>
